Test Org - Speridian/src/objects/BA_Task_Chapter__c.object
<CustomObject>
    <description>Task Chapters</description>
    <fields>
        <fullName>ba_Chapter_Component_Name__c</fullName>
        <description>Lightning Component Name</description>
        <label>Chapter Component Name</label>
        <length>200</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ba_Chapter_Name__c</fullName>
        <description>Chapter Name</description>
        <inlineHelpText>TaskName_ChapterName</inlineHelpText>
        <label>Chapter Name</label>
        <length>200</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ba_Display_Name__c</fullName>
        <label>Display Name</label>
        <length>200</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ba_Sequence_Number__c</fullName>
        <description>Chapter Sequence Number in Context of Parent Task</description>
        <label>Task Sequence Number</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ba_Task_Flow__c</fullName>
        <description>Parent Task Flow</description>
        <label>Task Flow</label>
        <referenceTo>BA_Task_Flow__c</referenceTo>
        <relationshipLabel>Task Chapters</relationshipLabel>
        <relationshipName>Task_Chapters</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Task Chapter</label>
    <nameField>
        <displayFormat>BA-TCHPTR-{000000}</displayFormat>
        <label>Chapter Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Task Chapters</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>